#117 Removed unnecessary dependency